--- a/pom.xml
+++ b/pom.xml
@@ -176,6 +176,13 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                <version>2.7.4</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
