--- a/simple_shelf-dao/pom.xml
+++ b/simple_shelf-dao/pom.xml
@@ -17,6 +17,12 @@
         <java.version>1.8</java.version>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>com.zhongji</groupId>
+            <artifactId>simple_shelf-common</artifactId>
+        </dependency>
+
         <!--mybatis-plus-->
         <dependency>
             <groupId>mysql</groupId>
