--- a/simple_shelf-web/src/main/resources/application.properties
+++ b/simple_shelf-web/src/main/resources/application.properties
@@ -29,3 +29,9 @@ spring.rabbitmq.template.mandatory=true
 spring.rabbitmq.addresses=124.221.161.34:5672,43.135.135.141:5672
 spring.rabbitmq.username=admin
 spring.rabbitmq.password=1qaz@WSX3456
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
