--- a/simple_shelf-dao/src/main/resources/application-mysql-data.properties
+++ b/simple_shelf-dao/src/main/resources/application-mysql-data.properties
@@ -3,7 +3,7 @@ spring.datasource.dynamic.primary=zhongji1
 spring.datasource.dynamic.datasource.zhongji1.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.dynamic.datasource.zhongji1.username=****
 spring.datasource.dynamic.datasource.zhongji1.password=*****
-spring.datasource.dynamic.datasource.zhongji1.url=jdbc:oracle:thin:@//10.69.100.19:1521/erpsid
+spring.datasource.dynamic.datasource.zhongji1.url=*****
 
 
 
