--- a/simple_shelf-web/src/main/resources/application.properties
+++ b/simple_shelf-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 kgboot.kafka.bootstrapServers=124.221.161.34:9092,124.221.161.34:9093,124.221.161.34:9094
 kgboot.enable.http=true
-kgboot.enable.kafka=true
-kgboot.enable.redis=true
+kgboot.enable.kafka=false
+kgboot.enable.redis=false
 kgboot.api.trace-id-key=abc
 kgboot.kafka.enable-auto-commit=true
 kgboot.kafka.consumer.topics=testTopic
@@ -33,3 +33,5 @@ spring.rabbitmq.password=1qaz@WSX3456
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
+
+
