--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>simple_shelf-dao</module>
         <module>simple_shelf-util</module>
         <module>simple_shelf-api</module>
+        <module>simple_shelf-externaldata</module>
     </modules>
 
     <dependencyManagement>
@@ -58,6 +59,14 @@
                 <artifactId>simple_shelf-util</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.zhongji</groupId>
+                <artifactId>simple_shelf-externaldata</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+
 
             <dependency>
                 <groupId>com.zhongji</groupId>
@@ -166,6 +175,13 @@
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>3.16.2</version>
+            </dependency>
+
+            <!--钉钉-->
+            <dependency>
+                <groupId>com.aliyun</groupId>
+                <artifactId>alibaba-dingtalk-service-sdk</artifactId>
+                <version>2.0.0</version>
             </dependency>
 
 
