--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
                 <version>3.4</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.11.0</version> <!-- Replace with the latest version available -->
+            </dependency>
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
