--- a/simple_shelf-core/pom.xml
+++ b/simple_shelf-core/pom.xml
@@ -27,6 +27,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>com.zhongji</groupId>
 			<artifactId>simple_shelf-api-spring-boot-starter</artifactId>
 		</dependency>
